--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mime": "2.4.4",
     "mongodb": "3.5.5",
     "parse": "2.11.0",
+    "parse-server": "4.1.0",
     "pg-promise": "10.4.4",
     "pluralize": "^8.0.0",
     "redis": "3.0.2",
